# Compiler

./: README.md
Compiler/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SemanticAnalysator.cpp  SemanticAnalysator.h  grammar  main.cpp
Compiler/tests/: function_test  loops_if_test  struct_test  test
